# rust-switchhost

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  FINAL_SUMMARY.md  PLAN.md  PROJECT_SUMMARY.md  README.md  README_EN.md  RUNNING.md  Rust_SwitchHost_项目分析报告.md  index.html  package-lock.json  package.json  rust-switchhost-optimization-plan.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.workflow/: gitee-release.yml  pipeline-20260409.yml
scripts/: gitee-release-upload.mjs  release-github.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  create-icon.html  create-icon.py
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs  validation.rs
src-tauri/src/commands/: hosts.rs  mod.rs  schemes.rs  updates.rs
src-tauri/src/hosts/: mod.rs  parser.rs  writer.rs
src-tauri/src/schemes/: manager.rs  mod.rs
src/lib/: App.svelte
src/lib/components/: BackupHistoryModal.svelte  CreateSchemeModal.svelte  CurrentHostsModal.svelte  DnsDiagnosticModal.svelte  Editor.svelte  MergedHostsPreviewModal.svelte  Modal.svelte  QuickStartGuideModal.svelte  RemoteSyncModal.svelte  RemoteSyncPreviewModal.svelte  Sidebar.svelte  SyncLogModal.svelte  ThemeToggle.svelte  Toast.svelte  TrayMetricsWidget.svelte  UpdateModal.svelte
src/lib/data/: templates.ts
src/lib/services/: app.ts  hosts.ts  schemes.ts  updater.ts
src/lib/stores/: app.ts  schemes.ts  templates.ts  theme.ts  toasts.ts  updater.ts
src/lib/types/: index.ts
src/lib/utils/: hosts-analysis.ts  hosts-editor.ts
